tests/build/cases/widget_new/missing_value3.stderr
error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> cases/widget_new/missing_value3.rs:7:9
   |
5  |       let _ = Wgt! {
   |  _____________-
6  | |         // we expected an error here.
7  | |         cursor = ;
   | |         ^^^^^^
8  | |         // we expect margin to be used here.
9  | |         margin = 0;
10 | |     };
   | |_____- an argument is missing
   |
note: associated function defined here
  --> $WORKSPACE/zero-ui/src/properties/mouse.rs
   |
   | pub fn cursor(child: impl UiNode, cursor: impl IntoVar<Option<CursorIcon>>) -> impl UiNode {
   |        ^^^^^^
help: provide the argument
  --> $WORKSPACE/zero-ui/src/widgets.rs
   |
   | cursor(/* cursor */)
   |
